--- a/_includes/therapists.html
+++ b/_includes/therapists.html
@@ -9,7 +9,7 @@
 {% assign featured = therapists.members[0] %}
 <section id="therapists" class="cove-section cove-therapists">
   <div class="cove-shell">
-    <div class="cove-section-heading cove-section-heading--left">
+    <div class="section-intro section-intro--left">
       {% if therapists_label != '' %}
       <p class="cove-eyebrow">{{ therapists_label }}</p>
       {% endif %}
@@ -39,7 +39,7 @@
 
     <div class="cove-therapists-grid">
       {% for member in therapists.members offset:1 %}
-      <article class="cove-therapists-card">
+      <article class="cove-therapists-card cove-surface">
         <div class="cove-therapists-card-media">
           <img
             alt="{{ member.alt }}"
